# beacon

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  auth.py  cost.py  db.py  github_api.py  keys.py  main.py  migrate.py  models.py  passwords.py  pricing.py  pytest.ini  requirements.txt  validation_pipeline.py
backend/alembic/: env.py
backend/notifications/: triggers.py
backend/policies/: __init__.py  cost_cap.py
backend/tests/: conftest.py  test_agents.py  test_api_keys.py  test_auth.py  test_commands.py  test_deployments.py  test_events.py  test_github.py  test_instances.py  test_multitenancy.py  test_notifications.py  test_notifications_triggers.py  test_polaris.py  test_polaris_docs.py  test_policies.py  test_validation_pipeline.py  test_validators.py  (+2 more)
dashboard/: Dockerfile  package-lock.json  package.json
examples/: demo_bot.py
polaris/: README.md  bot.py  lightsei-0.0.1-py3-none-any.whl  requirements.txt  setup_validators.py  system_prompt.md
scripts/: restore.sh
sdk/: LICENSE  README.md  pyproject.toml
sdk/beacon/: __init__.py  _client.py  _context.py  _track.py  errors.py
sdk/beacon/integrations/: _streamtap.py  anthropic_patch.py  openai_patch.py
sdk/lightsei/: __init__.py  _chat.py  _cli.py  _client.py  _commands.py  _instance.py  errors.py
sdk/lightsei/integrations/: _streamtap.py  anthropic_patch.py  openai_patch.py
sdk/tests/: test_basic.py
worker/: README.md  run_local.py  runner.py
(+27 files in other folders)
